re PR middle-end/65747 (ICE (in compare_ssa_name, at ipa-icf-gimple.c:134) on x86_64-linux-gnu)

PR tree-optimization/65747
	* ipa-icf-gimple.c (func_checker::compare_operand): Use compare_operand
	rather than compare_ssa_name for OBJ_TYPE_REF_OBJECT.

	* g++.dg/torture/pr65747.C: New test.

From-SVN: r222024